@@ -1,10 +1,10 @@
 {
-  "count": 4131,
+  "count": 4150,
   "uniques": 4,
   "clones": [
     {
       "timestamp": "2023-09-24T00:00:00Z",
-      "count": 226,
+      "count": 134,
       "uniques": 2
     },
     {
@@ -70,6 +70,11 @@
     {
       "timestamp": "2023-10-07T00:00:00Z",
       "count": 299,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2023-10-08T00:00:00Z",
+      "count": 111,
       "uniques": 1
     }
   ]
