@@ -1,3 +1,12 @@
+2023-10-08T08:15:07Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/6446470916 # 1247
+* notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2023-10-08
+* notice: last 14d: unq all: 4 4150
+* notice: prev accum: outdated-unq outdated-all / unq all: 1730 163754 / 1765 167960
+* notice: next accum: outdated-unq outdated-all / unq all: 1730 163754 / 1766 168071
+* notice: prev exec diff / last date diff / accum: unq all: +1 +111 -0 -92 / +1 +111 -0 -0 / 1 111
+* notice: removed / changed dates: [] / [2023-09-24 2023-10-08]
+
 2023-10-08T01:03:08Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/6444544582 # 1246
 * notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2023-10-08
